# LLMS_from_scratch

./: .gitignore  README.md  pyproject.toml
GPT-2/: model.py  train.py  train_gpt_2.ipynb
moe-with-null-experts/: README.md
