[project]
name = "train-gpt-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "gradio>=5.49.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "regex>=2025.11.3",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
